--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.4
   dio: ^5.4.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
